# ChangeLog for calc:

*calc-0.1:
	Martin Väth <martin at mvath.de>:
	- Initial implementation